src/components/header.module.scss
.header{
    padding: 1rem 0 3rem;
}

.title{
    color: #000000;
    font-size: 3rem;
    text-decoration: none;
    text-align: center;
}


.links{
    position: fixed;
    top: 30px;
    right: 30px;
    max-width: 40vw;
    text-align: right;
}

.navItem {
    color: #eeeeee;
    font-size: .9rem;
    text-decoration: none;
}

.navItem:hover {
    color: #666666;
}

.activeNavItem {
    color: #333333
}

.background{
    position: fixed;
    top: 0;
    left:0;
    z-index: -1;
    width: 100vw;
    height: 100vh;
}

.imageTop{
    position: fixed;
    display: block;
    margin: auto;
    left: 0;
    width: 550px;
    height: 55vw;
    transition: all 0.6s ease-out;
    -webkit-transition: all 0.6s ease-out;
}

//@media only screen  and (min-width: 550px) {
    .imageTop{
    height: 300px;
    left: calc(50vw - 275px);
    }
//}

.imageScroll{
    width: 200px;
    height:110px;
    position: fixed;
    left:20px;
    top:20px;
    transition: all 0.6s ease-out;
    -webkit-transition: all 0.6s ease-out;
}

.fixedHeight{
    height:300px;
}

.card{
    background: #eeeeee;
    border-radius: 8px;
    padding: 20px;
    box-shadow: 0 5px 50px rgb(0 0 0 / 60%);
  }

